--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,14 @@
-.iframe
-{
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;  
-  width: 100%;
-  min-height: 100%;
-  padding-top: 4em;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+body {
+  background-color: #f5f5f5;
 }
 
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
-  background-color: #fff;
-  border-bottom: 1px solid #ccc;
-  padding: 0.5em 1em;
-  text-align: center;
+iframe {
+  width: 100px;
+  height: 50px;
+  margin: 0 auto;
+  background-color: #777;
+}
+
+iframe:hover {
+  background-color: #000;
 }
